# xtra-mcp

./: .dockerignore  .env.example  .gitignore  README.md  initialize.sh  pyproject.toml
.agents/skills/pr-reviewer/: SKILL.md
.agents/skills/rl-specialist/: SKILL.md
.agents/skills/software-designer/: SKILL.md
.ai-dotfiles/: README.md
.ai-dotfiles/claude/.claude/: CLAUDE.md  settings.json
.ai-dotfiles/codex/.codex/: AGENTS.md  config.toml
.ai-dotfiles/gemini/.gemini/: GEMINI.md  settings.json
.ai-dotfiles/gemini/.gemini/agents/: debug.agent.md  dev-lead.agent.md  implementation-plan.agent.md  janitor.agent.md  python-reviewer.md
.ai-dotfiles/gemini/.gemini/antigravity-cli/: mcp_config.json  settings.json  skills
.ai-dotfiles/gemini/.gemini/commands/: review.toml  workflow.toml
.ai-dotfiles/gemini/.gemini/policies/: policy.toml
.ai-dotfiles/vibe/.vibe/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.gemini/: settings.json
.gemini/agents/: adr-generator.agent.md  debug.agent.md  implementation-plan.agent.md  janitor.agent.md  python-reviewer.md
.skills/belgian-chef/: SKILL.md
.skills/belgian-chef/references/: nutrition-guide.md
.skills/dev-lead/: SKILL.md
.skills/reviewer/: SKILL.md
docs/: plan.md
docs/api-call-dumps/: add-items-to-list.md  login.md  most-bought-products.md  product-search.md
plan/: feature-xtra-mcp-server-1.0.md
recipes/: Thaise rode curry met kip.md
scripts/: test_search.py
src/: client.py  logic.py  models.py  server.py
tests/: test_logic.py  test_resolve.py  test_server.py
(+1 files in other folders)
