[project]
name = "xtra-mcp"
version = "0.1.0"
description = "MCP server for Xtra Colruty App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.27.0",
    "omega-memory[server]",
    "httpx",
    "pydantic",
    "python-dotenv"
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ipykernel"
]
